[package]
name = "l211_http"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
